--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="overlay" id="overlay" onclick="off()"></div>
+    <div class="overlay" id="overlay" onclick="hide()"></div>
 
 
     <div class="main vh-100 text-center overflow-auto">
